Users models and api added
