# openapi/openapi.yaml
@@ -36,7 +36,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Task'
     put:
-      summary: Update task ID
+      summary: Update task by ID
       tags:
         - tasks
       parameters:
@@ -86,6 +86,89 @@ paths:
           description: Deleted task
         '404':
           description: Task not found
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: New user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    put:
+      summary: Update user by ID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: string
+          description: ID of user to update
+      requestBody:
+        description: Update user email and password
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: Updated email
+                password:
+                  type: string
+                  description: Updated password
+      responses:
+        '200':
+          description: Updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+
+    delete:
+      summary: Delete existing user by ID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: string
+          description: ID of user to delete
+      responses:
+        '204':
+          description: Deleted user
+        '404':
+          description: User not found
 
 components:
   schemas:
@@ -101,3 +184,16 @@ components:
           type: boolean
       required:
         - text
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
+      required:
+        - email
+        - password
